# fenlife-analytics-platform

./: .gitignore  Makefile  README.md  docker-compose.yml  fenlife.code-workspace
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 9eca1fbd541a_initial_schema.py  a1b2c3d4e5f6_add_dashboard_data_to_report_jobs.py
backend/app/: config.py  main.py
backend/app/api/routes/: health.py  reports.py  students.py
backend/app/db/: models.py  session.py
backend/app/features/: difficulty_gap.py  risk.py  trend.py  weakness.py
backend/app/identity/: resolver.py
backend/app/models/: exam.py  report.py  student.py
backend/app/narrative/: claude_client.py  prompts.py
backend/app/parser/: detector.py  pipeline.py  schemas.py
backend/app/parser/parsers/: akbim.py  base.py  generic.py  nartest.py  toder.py
backend/app/report/: analytics.py  charts.py  generator.py  learning_outcomes.py
backend/app/report/templates/: fenlife_base.docx
backend/app/repositories/: report_job_repo.py  student_repo.py
backend/app/services/: report_service.py
backend/app/storage/: job_store.py
backend/scripts/: demo_report.py  run_dev.sh  test_parser.py
backend/tests/test_parser/: test_detector.py
docs/: api.md  architecture.md  setup.md
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
sample-data/: README.md  demo_asya_nur_tuncer.docx  ornek_rapor_kaan_colpan.docx
(+23 files in other folders)
